# iguane-rgu

./: LICENSE.txt  README.md  iguane_rgu.ipynb  pyproject.toml
milabench/: report.csv  report.err  report.failed.csv  report.failed.err  report.sh
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_36/: bert-tf32-fp16.0.data
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_46/: bert-tf32-fp16.0.data
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_68/: bert-tf32-fp16.0.data
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_80/: bert-tf32-fp16.0.data
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_86/: bert-tf32-fp16.0.data
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_90/: bert-tf32-fp16.0.data
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_90.failed_2024-12-10-13:38:16.799560/: bert-tf32-fp16.0.data
milabench/runs/NVIDIA-A100-SXM4-40GB_bert-tf32-fp16_90.failed_2024-12-11-12:39:05.895912/: bert-tf32-fp16.0.data  bert-tf32-fp16.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_110592/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_129024/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_138240/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_142848/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_147456/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_147456.failed_2024-12-10-19:07:38.207692/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_147456.failed_2024-12-11-12:43:24.476896/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_16384/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_16896/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_2048/: brax.0.data  brax.0.stderr
milabench/runs/NVIDIA-A100-SXM4-40GB_brax_21504/: brax.0.data  brax.0.stderr
src/iguane_rgu/: gpu_data.py  lin_reg_strategies.py  milabench_data.py  milabench_weights.py  milabench_weights.yaml
(+4474 files in other folders)
